Fixed topbar alignment and added analytics

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ a{
 	width: 100%;
 	float: left;
 	padding-left: 3%;
-	padding-top: 1%;
+	padding-top: 0%;
 	padding-right: 3%;
 	display: block;
 	/*height: 4%;*/
@@ -27,7 +27,7 @@ a{
 .link-section{
     float: right;
     margin-right: 3%;
-    /*display: inline;*/
+    display: inline-block;
 }
 
 .title-bar li{
@@ -35,12 +35,16 @@ a{
 	list-style-type: none;
 	margin-left: 10px;
 	float: left;
-	display: inline;
+	display: inline-block;
 }
 
 .title-bar a{
 	color: #ffffff;
-	display: inline;
+	display: inline-block;
+}
+
+#title{
+	margin-top: 15px;
 }
 
 .row {
